--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -6,8 +6,10 @@
           <div class="auth-card">
             <div class="card-header text-center">
               <img src="assets/images/uniprotec-logo.png" alt="Academia Uniprotec" class="auth-logo">
-              <h2 class="mt-3">{{ activeView === 'login' ? 'Iniciar sesión' : 'Crear cuenta' }}</h2>
-              <p class="text-muted">Portal de capacitación industrial</p>
+              <h2 class="mt-3">{{ activeView === 'login' ? 'Bienvenido de vuelta' : 'Crear cuenta' }}</h2>
+              <!--<p class="text-muted">Portal de capacitación industrial</p>-->
+                <h6>Tu espacio para aprender y certificarte</h6>
+              
             </div>
             
             <div class="card-body">
@@ -37,7 +39,7 @@
                     id="email" 
                     formControlName="email" 
                     [ngClass]="{'is-invalid': loginForm.get('email')?.invalid && loginForm.get('email')?.touched}"
-                    placeholder="nombre@ejemplo.com">
+                    placeholder="tunombre@empresa.com">
                   <div class="invalid-feedback" *ngIf="loginForm.get('email')?.errors?.['required'] && loginForm.get('email')?.touched">
                     El correo es requerido
                   </div>
@@ -93,7 +95,7 @@
                     id="reg-email" 
                     formControlName="email"
                     [ngClass]="{'is-invalid': registerForm.get('email')?.invalid && registerForm.get('email')?.touched}"
-                    placeholder="nombre@ejemplo.com">
+                    placeholder="tunombre@empresa.com">
                   <div class="invalid-feedback" *ngIf="registerForm.get('email')?.errors?.['required'] && registerForm.get('email')?.touched">
                     El correo es requerido
                   </div>
