--- a/src/app/component/redesigned-home/redesigned-home.component.scss
+++ b/src/app/component/redesigned-home/redesigned-home.component.scss
@@ -337,3 +337,16 @@ $uniprotec-dark-gray: #333333;
     }
   }
 }
+
+.message-header {
+  text-align: center;
+  margin-bottom: 2rem;
+  padding: 2rem 0;
+  
+  h3 {
+    font-weight: 700;
+    color: #0066b3;
+    margin-bottom: 0.5rem;
+  }
+  
+}
