--- a/src/app/component/coursedetails/coursedetails.component.html
+++ b/src/app/component/coursedetails/coursedetails.component.html
@@ -106,7 +106,7 @@
           
             <div class="checkout-options mt-3">
               <button class="btn btn-primary btn-lg w-100" (click)="proceedToCheckout()">
-                <i class="bi bi-cart-check me-2"></i> Inscribirme ahora
+                <i class="bi bi-cart-check me-2"></i> Aparta mi lugar
               </button>
             </div>
             
