fix: absolute path in css backgroun image url

--- a/src/app/component/redesigned-home/redesigned-home.component.scss
+++ b/src/app/component/redesigned-home/redesigned-home.component.scss
@@ -206,7 +206,7 @@ $uniprotec-dark-gray: #333333;
 }
 .cta-section {
   background: //linear-gradient(rgba(0, 102, 179, 0.85), rgba(0, 76, 134, 0.9)), 
-              url('../../../assets/images/Fondo-Listo.jpg');
+              url(/assets/images/Fondo-Listo.jpg);
   background-size: cover;
   background-position: center;
   color: white;
