--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -77,7 +77,7 @@
                 </div>
                 
                 <div class="text-center mt-3">
-                  <a href="#" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
+                  <a routerLink="/forgot-password" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
                 </div>
               </form>
               
