small changes in the course list and course details page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,6 +96,9 @@
       </div>
       
       <div class="footer-links">
+
+
+        <!--
         <div class="footer-section">
           <h4>Navegación</h4>
           <ul>
@@ -109,19 +112,24 @@
         <div class="footer-section">
           <h4>Categorías</h4>
           <ul>
-            <li><a routerLink="/courses/normativas-clave">Normativas Clave</a></li>
-            <li><a routerLink="/courses/seguridad-especializada">Seguridad Especializada</a></li>
-            <li><a routerLink="/courses/proteccion-y-prevencion">Protección y Prevención</a></li>
-            <li><a routerLink="/courses/calidad">Calidad</a></li>
+             <li><a [routerLink]="['/courses', 'Normativas Clave']">Normativas Clave</a></li>
+           <li><a [routerLink]="['/courses', 'Seguridad Especializada']">Seguridad Especializada</a></li>
+          <li><a [routerLink]="['/courses', 'Protección y Prevención']">Protección y Prevención</a></li>
+           <li><a [routerLink]="['/courses', 'Desarrollo Profesional']">Desarrollo Profesional</a></li>
+           
           </ul>
-        </div>
+        </div>-->
         
         <div class="footer-section">
           <h4>Contacto</h4>
           <ul class="contact-info">
-            <li><i class="bi bi-geo-alt"></i> Ciudad de México, México</li>
-            <li><i class="bi bi-telephone"></i> (55) 1234-5678</li>
-            <li><i class="bi bi-envelope"></i> infoacademia-uniprotec.com</li>
+            <li><i class="bi bi-geo-alt"></i> Ámbar 20 Col. Misión Mariana, Corregidora, Querétaro 76903, Mexico</li>
+            <li><i class="bi bi-telephone"></i>
+             <a href="https://wa.me/5214424596476" target="_blank" rel="noopener noreferrer">
+                44 2459 6476
+              </a>
+            </li>
+            <li><i class="bi bi-envelope"></i> ventas&#64;uniprotec.net</li>
           </ul>
         </div>
       </div>
@@ -130,10 +138,10 @@
     <div class="footer-bottom">
       <p>© 2025 Academia Uniprotec. Todos los derechos reservados.</p>
       <div class="social-links">
-        <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
-        <a href="#" target="_blank"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.facebook.com/UniprotecSAdeCV" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/uniprotec_oficial?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/uniprotec/?viewAsMember=true&fbclid=IwY2xjawKFx31leHRuA2FlbQIxMABicmlkETFFQms3ZlBVaGd2bHVlNUQ1AR6KByvjygTYSOxYPRgoriVLavITcsd_0bxfdqJjmMqK2Zoh7wDTGjzEbe6wZg_aem_BhKC0gz6MNQbD8lw2H8tWg" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.youtube.com/@uniprotecdigital9440" target="_blank"><i class="bi bi-youtube"></i></a>
       </div>
     </div>
   </div>
