--- a/src/app/component/redesigned-home/redesigned-home.component.html
+++ b/src/app/component/redesigned-home/redesigned-home.component.html
@@ -51,7 +51,7 @@
         <div class="col-md-3 col-6">
           <div class="stat-item">
             <div class="stat-number">+70</div>
-            <div class="stat-label">Cursos Semanales</div>
+            <div class="stat-label">Cursos incompany a la semana</div>
           </div>
         </div>
         <div class="col-md-3 col-6">
@@ -62,8 +62,8 @@
         </div>
         <div class="col-md-3 col-6">
           <div class="stat-item">
-            <div class="stat-number">+15k</div>
-            <div class="stat-label">Alumnos Egresados</div>
+            <div class="stat-number">+150k</div>
+            <div class="stat-label">Trabajadores Capacitados</div>
           </div>
         </div>
       </div>
